# Canon

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  DEBT.md  Dockerfile  ECOSYSTEM.md  README.md  SCOPE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/codex/prompts/: review.md
.github/workflows/: ci.yml  doc-lint.yml  nizamiq_standard.yml
alembic/: __init__.py  env.py
alembic/versions/: 001_initial.py
docs/api/: CHANGELOG.md  README.md
docs/architecture/: CHANGELOG.md  README.md  system_design.md
docs/governance/: AI_AGENT_INSTRUCTIONS.md  CHANGELOG.md  ci_cd_standards.md
docs/planning/: DEBT.md  manifest.json
docs/planning/phases/: CHANGELOG.md  phase_00_init.yaml  phase_01_core_service.yaml  phase_02_sdk.yaml  phase_03_integration.yaml
k8s/: deployment.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
src/canon/: __init__.py  main.py
src/canon/api/: __init__.py
src/canon/api/v1/: __init__.py
src/canon/api/v1/endpoints/: __init__.py  health.py  prompts.py
src/canon/core/: __init__.py  aegis.py  auth.py  config.py  database.py  logging.py
src/canon/models/: __init__.py  base.py  prompt.py
src/canon/sdk/: __init__.py  client.py
src/canon/services/: __init__.py  audit.py  prompt.py
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_config.py  test_sdk.py  test_services.py
